# mimir-linguistic

./: .gitignore  README.md  pyproject.toml
notebooks/: create_results_tables.ipynb
output/: README.md
output/mimir-project/mimir-7b-factual/evaluate_all/: args.json  generation_config.json
output/mimir-project/mimir-7b-fiction/evaluate_all/: args.json  generated_text.csv
output/mimir-project/mimir-7b-newspapers/evaluate_all/: generated_text.csv  generation_config.json
output/mimir-project/mimir-7b-nonfiction/evaluate_all/: generated_text.csv  results.jsonl
output/mimir-project/mimir-7b-rightholders/evaluate_all/: args.json
output/mimir-project/mimir-7b-translated/evaluate_all/: args.json
output/mimir-project/mimir-7b-untranslated/evaluate_all/: args.json  generated_text.csv
output/mimir-project/mimir-mistral-7b-base-instruct/evaluate_all/: args.json  generated_text.csv
output/mimir-project/mimir-mistral-7b-base-scratch-instruct/evaluate_all/: args.json
output/mimir-project/mimir-mistral-7b-base-scratch/evaluate_all/: results.jsonl
output/mimir-project/mimir-mistral-7b-extended-instruct/evaluate_all/: generated_text.csv
output/mimir-project/mimir-mistral-7b-extended-scratch-instruct/evaluate_all/: generated_text.csv  results.jsonl
output/mimir-project/mimir-mistral-7b-extended-scratch/evaluate_all/: args.json  generated_text.csv
output/mimir-project/mimir-mistral-7b-extended/evaluate_all/: args.json  generated_text.csv
output/mimir-project/nb-llama-1.5b-mimirbase/evaluate_all/: args.json
output/mimir-project/ntnu-llama-1.5b-mimirbase/evaluate_all/: generated_text.csv
output2/mimir-project/mimir-7b-factual/evaluate_all/: args.json
output2/mimir-project/mimir-7b-fiction/evaluate_all/: results.jsonl
output2/mimir-project/mimir-7b-newspapers/evaluate_all/: args.json  generated_text.csv  results.jsonl
output2/mimir-project/mimir-7b-rightholders/evaluate_all/: args.json  results.jsonl
output2/mimir-project/mimir-7b-translated/evaluate_all/: generated_text.csv
output2/mimir-project/mimir-7b-untranslated-withnewspapers/evaluate_all/: args.json  generated_text.csv
output2/mimir-project/mimir-7b-untranslated/evaluate_all/: generation_config.json
output2/mimir-project/mimir-mistral-7b-base-instruct/evaluate_all/: args.json  generation_config.json
output2/mimir-project/mimir-mistral-7b-base-scratch-instruct/evaluate_all/: results.jsonl
output2/mimir-project/mimir-mistral-7b-base/evaluate_all/: args.json  generated_text.csv
output2/mimir-project/mimir-mistral-7b-extended-instruct/evaluate_all/: args.json
output2/mimir-project/mimir-mistral-7b-extended-scratch-instruct/evaluate_all/: results.jsonl
output2/mimir-project/mimir-mistral-7b-extended-scratch/evaluate_all/: generated_text.csv  results.jsonl
results/contrastive/: README.md
results/contrastive-10x/: README.md  create_results_table.py  results_table.csv
results/contrastive-10x/mimir-project/: results_table.csv
results/contrastive/results/: mimir-7b-translated.jsonl  mimir-7b-untranslated-withnewspapers.jsonl  mimir-7b-untranslated.jsonl  mimir-mistral-7b-base-scratch-instruct.jsonl  mimir-mistral-7b-base-scratch.jsonl  mimir-mistral-7b-extended-scratch-instruct.jsonl
results/dash_apps/: datasets_comparison.ipynb  honest.ipynb  lex_div_source.csv  lex_lix_generated_contrastive.csv  lex_lix_generated_greedy.csv  lex_lix_source.csv  linguistic_tasks.ipynb  models_per_task.ipynb  models_vs_datasets.ipynb  utils.py
results/greedy/: README.md  results_table.csv
results/greedy/results/: ltg-llama-1.5b-mimirbase.jsonl  mimir-7b-fiction.jsonl  mimir-7b-newspapers.jsonl  mimir-7b-translated.jsonl  mimir-7b-untranslated-withnewspapers.jsonl  mimir-7b-untranslated.jsonl  mimir-mistral-7b-base-instruct.jsonl  mimir-mistral-7b-base-scratch.jsonl  mimir-mistral-7b-base.jsonl  mimir-mistral-7b-extended-instruct.jsonl  mimir-mistral-7b-extended-scratch-instruct.jsonl  mimir-mistral-7b-extended-scratch.jsonl  nb-llama-1.5b-mimirbase.jsonl
results/output/: README.md
results/source_texts/: startprompts_and_subtexts_nn.csv  startprompts_and_subtexts_no.csv
results/source_texts/lexical_diversity/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/books/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/factual/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/fiction/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/newspapers/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/nn/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/no/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/nonfiction/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/lexical_diversity/translated/: scores_across_texts.csv  scores_per_text.csv
results/source_texts/readability/: scores_across_texts.csv  scores_per_text.csv
scripts/: contrastive_10x.sh  create_results_table.py  greedy.sh  remove_results.py
sentence-starters/: sentence_starters.csv
src/analogies/: __init__.py  __main__.py
src/evaluate_all/: __init__.py  __main__.py
src/generate/: __init__.py  __main__.py
src/idioms/: __init__.py  __main__.py
src/idioms/norwegian-idioms/: nno_idioms_curated.txt  nob_idioms_curated.txt
src/lexical_diversities/: __init__.py  __main__.py  stopwords.txt
src/mimir_linguistic/evaluate_all/: __init__.py  __main__.py
src/mimir_linguistic/generate/: __init__.py  __main__.py
src/mimir_linguistic/lexical_diversities/: SelfBleu.py  __init__.py  __main__.py  self_bleu.py  stopwords.py
src/mimir_linguistic/readability/: __init__.py  __main__.py
src/mimir_linguistic/sample_text_starters/: __init__.py  __main__.py
src/no_honest/: __init__.py  __main__.py
src/readability/: __init__.py  __main__.py
src/sample_text_starters/: __init__.py  __main__.py
src/synonyms/: __init__.py  __main__.py
src/utils/: __init__.py
(+4493 files in other folders)
