[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-eval"
version = "1.0.0"
authors = [
    {name = "Tita Enstad", email = "tita.enstad@nb.no"},
    {name = "Magnus Breder Birkenes", email = "magnus.birkenes@nb.no"},
    {name = "Marie Iversdatter Røsok", email = "marie.rosok@nb.no"},
    {name = "The Norwegian Language Bank at the National Library of Norway", email = "sprakbanken@nb.no"}
]

dependencies = [
    "absl-py==2.1.0",
    "accelerate==0.29.2",
    "aiohttp==3.9.4",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "asttokens==2.4.1",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "bitsandbytes==0.43.1",
    "blis==0.7.11",
    "cachetools==5.3.3",
    "catalogue==2.0.10",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpathlib==0.16.0",
    "comm==0.2.2",
    "confection==0.1.4",
    "cymem==2.0.8",
    "datasets==2.19.1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "dill==0.3.8",
    "diversity==0.1.21",
    "evaluate==0.4.1",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "filelock==3.13.4",
    "frozenlist==1.4.1",
    "fsspec==2024.3.1",
    "gcsfs==2024.3.1",
    "google-api-core==2.19.0",
    "google-auth==2.29.0",
    "google-auth-oauthlib==1.2.0",
    "google-cloud-core==2.4.1",
    "google-cloud-storage==2.16.0",
    "google-crc32c==1.5.0",
    "google-resumable-media==2.7.0",
    "googleapis-common-protos==1.63.0",
    "honest==0.2.1",
    "huggingface-hub==0.22.2",
    "idna==3.7",
    "ipykernel==6.29.4",
    "ipython==8.23.0",
    "jedi==0.19.1",
    "Jinja2==3.1.3",
    "joblib==1.4.0",
    "jupyter_client==8.6.1",
    "jupyter_core==5.7.2",
    "kaleido==0.2.1",
    "langcodes==3.3.0",
    "lexical-diversity==0.1.1",
    "MarkupSafe==2.1.5",
    "matplotlib-inline==0.1.6",
    "mpmath==1.3.0",
    "multidict==6.0.5",
    "multiprocess==0.70.16",
    "murmurhash==1.0.10",
    "nb-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/nb_core_news_lg-3.7.0/nb_core_news_lg-3.7.0-py3-none-any.whl",
    "nb_tokenizer==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.19.3",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.1.105",
    "oauthlib==3.2.2",
    "packaging==24.0",
    "pandas==2.2.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.2.0",
    "plotly==5.22.0",
    "preshed==3.0.9",
    "prompt-toolkit==3.0.43",
    "proto-plus==1.23.0",
    "protobuf==4.25.3",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyarrow==15.0.2",
    "pyarrow-hotfix==0.6",
    "pyasn1==0.6.0",
    "pyasn1_modules==0.4.0",
    "pydantic==2.7.0",
    "pydantic_core==2.18.1",
    "Pygments==2.17.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "PyYAML==6.0.1",
    "pyzmq==25.1.2",
    "regex==2023.12.25",
    "requests==2.31.0",
    "requests-oauthlib==2.0.0",
    "responses==0.18.0",
    "rouge-score==0.1.2",
    "rsa==4.9",
    "safetensors==0.4.3",
    "six==1.16.0",
    "smart-open==6.4.0",
    "spacy==3.7.4",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.4.8",
    "stack-data==0.6.3",
    "sympy==1.12",
    "tenacity==8.3.0",
    "thinc==8.2.3",
    "tokenizers==0.15.2",
    "torch==2.2.2",
    "tornado==6.4",
    "tqdm==4.66.2",
    "traitlets==5.14.2",
    "transformers==4.39.3",
    "triton==2.2.0",
    "typer==0.9.4",
    "typing_extensions==4.11.0",
    "tzdata==2024.1",
    "Unidecode==1.3.2",
    "urllib3==2.2.1",
    "wasabi==1.1.2",
    "wcwidth==0.2.13",
    "weasel==0.3.4",
    "xxhash==3.4.1",
    "yarl==1.9.4"
]

[tool.setuptools.packages.find]
where = ["src"] 
