[project]
name = "mimir-eval"
version = "1.0.0"
authors = [
    {name = "Tita Enstad", email = "tita.enstad@nb.no"},
    {name = "Magnus Breder Birkenes", email = "magnus.birkenes@nb.no"},
    {name = "Marie Iversdatter Røsok", email = "marie.rosok@nb.no"},
    {name = "The Norwegian Language Bank at the National Library of Norway", email = "sprakbanken@nb.no"}
]
requires-python = "<3.13,>=3.10"

dependencies = [
    "absl-py>=2.1.0",
    "accelerate>=1.3.0",
    "aiohttp>=3.11.11",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "asttokens>=3.0.0",
    "async-timeout>=5.0.1",
    "attrs>=24.3.0",
    "bitsandbytes>=0.45.0",
    "blis>=0.7.11",
    "cachetools>=5.5.0",
    "catalogue>=2.0.10",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "cloudpathlib>=0.20.0",
    "comm>=0.2.2",
    "confection>=0.1.5",
    "cymem>=2.0.11",
    "datasets>=2.14.4",
    "dash>=2.18.2",
    "debugpy>=1.8.12",
    "decorator>=5.1.1",
    "dill>=0.3.7",
    "diversity>=0.2.0",
    "evaluate>=0.4.3",
    "exceptiongroup>=1.2.2",
    "executing>=2.1.0",
    "filelock>=3.16.1",
    "frozenlist>=1.5.0",
    "fsspec==2024.10.0",
    "gcsfs>=2024.10.0",
    "google-api-core>=2.24.0",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud-core>=2.4.1",
    "google-cloud-storage>=2.19.0",
    "google-crc32c>=1.6.0",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.66.0",
    "huggingface-hub>=0.27.1",
    "idna>=3.10",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "jedi>=0.19.2",
    "Jinja2>=3.1.5",
    "joblib>=1.4.2",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "kaleido==0.2.1",
    "langcodes>=3.5.0",
    "lexical-diversity>=0.1.1",
    "MarkupSafe>=3.0.2",
    "matplotlib-inline",
    "mpmath>=1.3.0",
    "multidict>=6.1.0",
    "multiprocess>=0.70.15",
    "murmurhash>=1.0.12",
    "nb-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/nb_core_news_lg-3.7.0/nb_core_news_lg-3.7.0-py3-none-any.whl",
    "nb-tokenizer>=0.1.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "nvidia-cublas-cu12>=12.4.5.8",
    "nvidia-cuda-cupti-cu12>=12.4.127",
    "nvidia-cuda-nvrtc-cu12>=12.4.127",
    "nvidia-cuda-runtime-cu12>=12.4.127",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "nvidia-cufft-cu12>=11.2.1.3",
    "nvidia-curand-cu12>=10.3.5.147",
    "nvidia-cusolver-cu12>=11.6.1.9",
    "nvidia-cusparse-cu12>=12.3.1.170",
    "nvidia-nccl-cu12>=2.21.5",
    "nvidia-nvjitlink-cu12>=12.4.127",
    "nvidia-nvtx-cu12>=12.4.127",
    "oauthlib>=3.2.2",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "platformdirs>=4.3.6",
    "plotly>=5.24.1",
    "preshed>=3.0.9",
    "prompt-toolkit>=3.0.50",
    "proto-plus>=1.25.0",
    "protobuf>=5.29.3",
    "psutil>=6.1.1",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow>=19.0.0",
    "pyarrow-hotfix>=0.6",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pydantic>=2.10.5",
    "pydantic-core>=2.27.2",
    "Pygments>=2.19.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "PyYAML>=6.0.2",
    "pyzmq>=26.2.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "responses>=0.25.6",
    "rouge-score>=0.1.2",
    "rsa>=4.9",
    "safetensors>=0.5.2",
    "six>=1.17.0",
    "smart-open>=7.1.0",
    "spacy>=3.7.5",
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.5",
    "srsly>=2.5.1",
    "stack-data>=0.6.3",
    "sympy>=1.13.1",
    "tenacity>=9.0.0",
    "thinc>=8.2.5",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.48.1",
    "triton>=3.1.0",
    "typer>=0.9.4",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.2",
    "Unidecode>=1.3.2",
    "urllib3>=2.3.0",
    "wasabi>=1.1.3",
    "wcwidth>=0.2.13",
    "weasel>=0.4.1",
    "xxhash>=3.5.0",
    "yarl"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] 

[tool.pdm]
