[project]
name = "mimir-linguistic"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tita Enstad", email = "tita.enstad@nb.no"},
    {name = "Magnus Breder Birkenes", email = "magnus.birkenes@nb.no"},
    {name = "Marie Iversdatter Røsok", email = "marie.rosok@nb.no"},
    {name = "The Norwegian Language Bank at the National Library of Norway", email = "sprakbanken@nb.no"},

]
dependencies = [
    "transformers>=4.48.1",
    "datasets>=3.2.0",
    "diversity>=0.2.0",
    "pandas>=2.2.3",
    "nltk>=3.9.1",
    "torch>=2.5.1",
    "nb-tokenizer>=0.1.0",
    "accelerate>=1.3.0",
    "ipykernel>=6.29.5",
    "spacy>=3.8.4",

]
requires-python = "<3.13,>=3.10"
readme = "README.md"
license = {text = "CC-BY-4.0"}


[tool.pdm]
distribution = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
